--- a/style.css
+++ b/style.css
@@ -29,3 +29,17 @@ img {
 b {
     color: red;
 }
+
+#no1 {
+    font-family: 'Courier New', Courier, monospace;
+    font-weight: 800;
+}
+
+#no2 {
+    font-family:Verdana, Geneva, Tahoma, sans-serif;
+}
+
+#imageno3 {
+    width: 50px;
+    height: 50px;
+}
